# iou_app

./: .dockerignore  .env.dev  .env.prod  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  deploy.sh  docker-compose.yml  populate_db.py  pyproject.toml  pytest.ini  requirements.txt  set_env_vars.sh
.cursor/rules/: iou-app-dev.mdc
.docker/: Dockerfile
.github/workflows/: build-and-test.yml  build-docker.yml  build-test-deploy.yml  main_iou-app.yml  python-app.yml
alembic/: env.py
alembic/versions/: 15647270e3d8_add_entries_and_remove_boilerplate.py  baa9097006be_new_migration.py  dd8f0ceb0cc1_update_conversation_id_column.py
app/: backend_pre_start.py  crud.py  database.py  main.py  models.py  schemas.py  utils.py
app/core/: auth.py  logger.py  main_router.py
app/core/db/: mock_session.py  session.py
app/iou/: __init__.py  google_sheets.py  models.py  schema.py  user_db.py  utils.py  views.py
app/tests/: conftest.py  test_ddb.py  test_entries.py  test_schema.py  test_utils.py  test_views.py
bot/: auth.py  main.py  parse_exceptions.py
bot/tests/: test_error_handling.py
iou_app/: backend_pre_start.py  main.py
iou_app/iou/: __init__.py  ddb.py  google_sheets.py  schema.py  user_db.py  utils.py  views.py
iou_app/tests/: conftest.py  test_ddb.py  test_schema.py  test_utils.py  test_views.py
tests/: conftest.py  test_crud.py  test_database.py  test_main.py  test_models.py  test_schemas.py  test_utils.py
