[tool.poetry]
name = "app"
version = "0.2.2"
description = "IOU App"
authors = ["Skyler Carlson"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
orjson = "^3.9.15"
pydantic = "^2.7.3"
python-dotenv = "^0.21.1"
requests = "^2.32.3"
uvicorn = "^0.18.3"
black = "^24.3.0"
pytest = "^7.3.2"
unittest2 = "^1.1.0"
loguru = "^0.7.0"
tenacity = "^8.2.2"
pre-commit = "^3.3.3"
httpx = "^0.25.2"
pytest-env = "^1.1.3"
google-api-python-client = "^2.156.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
pandas = "^2.2.3"
toml = "^0.10.2"
