[tool.poetry]
name = "iou_app"
version = "0.11.3"
description = "IOU App"
authors = ["Skyler Carlson"]
packages = [
    { include = "iou_app" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.1"
orjson = "^3.10.16"
pydantic = "^2.11.3"
python-dotenv = "^0.21.1"
requests = "^2.32.3"
uvicorn = "^0.18.3"
black = "^24.10.0"
pytest = "^8.3.5"
unittest2 = "^1.1.0"
loguru = "^0.7.3"
tenacity = "^8.5.0"
pre-commit = "^3.8.0"
httpx = "^0.27.2"
pytest-env = "^1.1.5"
pandas = "^2.2.3"
toml = "^0.10.2"
boto3 = "^1.37.32"
